modules/gdscript/tests/scripts/runtime/errors/constant_array_is_deep.gd
const array: Array = [{}]

func test():
	var dictionary := array[0]
	var key: int = 0
	dictionary[key] = 0
